--- a/DAO2connectomics_table.ipynb
+++ b/DAO2connectomics_table.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "### Get JSON respresentation of Drosophila anatomy ontology\n",
     "\n",
-    "Drosophila anatomy ontology, json representation is pulled from a persistent URL.  This will always pull the latest version.  To refer to this version in future, use the version IRI (below),\n",
+    "Drosophila anatomy ontology, json representation is pulled from a persistent URL.  This will always pull the latest version.  To refer to this version in future, use the version IRI (below) with extension -> .json,\n",
     "\n"
    ]
   },
