--- a/DAO2connectomics_table.ipynb
+++ b/DAO2connectomics_table.ipynb
@@ -75,9 +75,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "URLs resolve to OntoBee, which can be used to programatically retrieive XML for the term.
-    
-    * Some other recipes for URLS:\n",
+    "URLs resolve to OntoBee, which can be used to programatically retrieive XML for the term\n\n",
+    "* Some other recipes for URLS:\n",
     "    * VFB: http://purl.obolibrary.org/obo/FBbt_00003361  -> http://virtualflybrain.org/reports/FBbt_00003361 \n",
     "    * Ontology Lookup Service (OLS):\n",
     "      * WEB https://www.ebi.ac.uk/ols/ontologies/fbbt/terms?iri=http://virtualflybrain.org/reports/FBbt_00003361\n",
